  structure so we no longer need to manage the runlevel explicitly on
  the heap. [Patrick]

o Fixed host discovery probe matching when looking at the returned TCP
  data in an ICMP error message.  This could lead to incorrectly
  discarded responses and the debugging error message: "Bogus trynum
  or sequence number in ICMP error message" [Kris]

o Fixed a segmentation fault in Nsock which occurred when calling
  nsock_write() with a data length of -1 (which means the data is a
  NULL-terminated string and Nsock should take the length itself) and
  the Nsock trace level was at least 2. [Kris]

o Nsock now supports binding to a local address and setting IPv4
  options with nsi_set_localaddr() and nsi_set_ipoptions(),
  respectively. [Kris]

o Nmap's Nsock-utilizing subsystems (DNS, NSE, version detection) have
  been updated to support the -S and --ip-options flags. [Kris]

o Added --ip-options support for the connect() scan (-sT). [Kris]

o The NSE Comm library now defaults to trying to read as many bytes as
  are available rather than lines if neither the "bytes" nor "lines"
  options are given.  Thanks to Brandon for reporting a problem which
  he noticed in the dns-test-open-recursion script. [Kris]

o Updated zoneTrans.nse to replace length bytes in returned domain
  names to periods itself rather than relying on NSE's old behavior of
  replacing non- printable characters with periods.  Thanks to Rob
  Nicholls for reporting the problem. [Kris]

o Changed the order preference of timing ping probes. [Michael]

o Enabled nmap to switch between multiple types of timing pings during
  port scanning. [Michael]

o Some Zenmap crashes have been fixed: trying to "refresh" the output
  of a scan loaded from a file, and trying to re-save a file loaded
  from the command line in some circumstances. [David]

o The file selector in Zenmap now remembers what directory it was last
  looking at. [David]

o Zenmap defaults to showing files matching both *.xml and *.usr in